--- a/maven-plugins/pom.xml
+++ b/maven-plugins/pom.xml
@@ -22,15 +22,15 @@
     <parent>
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>hk2-parent</artifactId>
-        <version>2.5.0-b43</version>
+        <version>2.5.0-b63-SNAPSHOT</version>
         <relativePath />
     </parent>
     <artifactId>maven-plugins</artifactId>
-    <version>2.5.0-b62-SNAPSHOT</version>
+    <version>2.5.0-b63-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
-        <hk2.version>2.5.0-b60</hk2.version>
+        <hk2.version>2.5.0-b63-SNAPSHOT</hk2.version>
     </properties>
 
     <modules>
