Upgrade to use JavaEE 8 Hibernate Validator
Signed-off-by: smillidge <steve.millidge@payara.fish>

--- a/hk2-utils/pom.xml
+++ b/hk2-utils/pom.xml
@@ -89,10 +89,22 @@
         	<optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml</groupId>
+            <artifactId>classmate</artifactId>
+            <optional>true</optional>
+        </dependency>
+        
+        <!-- Test scope -->
         <dependency>
           <groupId>javax.el</groupId>
           <artifactId>javax.el-api</artifactId>
@@ -104,14 +116,10 @@
           <scope>test</scope>
        </dependency>
        <dependency>
-          <groupId>org.jboss.logging</groupId>
-          <artifactId>jboss-logging</artifactId>
-          <optional>true</optional>
-       </dependency>
-       <dependency>
-          <groupId>com.fasterxml</groupId>
-          <artifactId>classmate</artifactId>
-          <optional>true</optional>
+           <groupId>org.glassfish</groupId>
+           <artifactId>javax.el</artifactId>
+           <version>${glassfish.javax.el.version}</version>
+           <scope>test</scope>
        </dependency>
     </dependencies>
 </project>
