--- a/pom.xml
+++ b/pom.xml
@@ -140,12 +140,13 @@
         <javax.json.version>1.0</javax.json.version>
         <glassfish.json.version>1.0.4</glassfish.json.version>
         <java.net.username>${user.name}</java.net.username>
-        <hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
+        <hibernate-validator.version>6.0.10.Final</hibernate-validator.version>
         <hibernate-validator.version.upperbound>7</hibernate-validator.version.upperbound>
-        <javax.validation.version>1.1.0.Final</javax.validation.version>
+        <javax.validation.version>2.0.1.Final</javax.validation.version>
         <javax.validation.version.upperbound>3</javax.validation.version.upperbound>
-        <javax.validation.osgi.version>1.1.0</javax.validation.osgi.version>
-        <javax.el.version>2.2.5</javax.el.version>
+        <javax.validation.osgi.version>2.0.1</javax.validation.osgi.version>
+        <javax.el.version>3.0.1-b06</javax.el.version>
+        <glassfish.javax.el.version>3.0.1-b10</glassfish.javax.el.version>
         <jtype.version>0.1.0</jtype.version>
         <javassist.version>3.22.0-CR2</javassist.version>
         <junit.version>4.12</junit.version>
@@ -165,7 +166,6 @@
         <javax.servlet.version>3.1.0</javax.servlet.version>
         <javax.ws.rs.version>2.0</javax.ws.rs.version>
         <javax.jsr311.version>1.1.1</javax.jsr311.version>
-        <javax.validation.version>1.1.0.Final</javax.validation.version>
         <classmate.version>1.3.3</classmate.version>
         <springcontext.version>4.3.16.RELEASE</springcontext.version>
         <guice.version>4.1.0</guice.version>
@@ -751,7 +751,7 @@
                 <version>${springcontext.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.hibernate</groupId>
+                <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator-cdi</artifactId>
                 <version>${hibernate-validator.version}</version>
             </dependency>
@@ -807,7 +807,7 @@
                 <version>${javassist.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.hibernate</groupId>
+                <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator</artifactId>
                 <version>${hibernate-validator.version}</version>
             </dependency>
