Shade all asm jars after the 6.0 split
Signed-off-by: smillidge <steve.millidge@payara.fish>

--- a/external/asm-all/pom.xml
+++ b/external/asm-all/pom.xml
@@ -133,5 +133,25 @@
             <artifactId>asm</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-commons</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-tree</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-util</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-xml</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
