--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ target/
 .vscode/
 .idea
 nb-configuration.xml
+external/asm-all/dependency-reduced-pom.xml
+hk2-configuration/persistence/hk2-xml/main/negative-output.xml
