--- a/maven-plugins/pom.xml
+++ b/maven-plugins/pom.xml
@@ -22,8 +22,7 @@
     <parent>
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>hk2-parent</artifactId>
-        <version>2.5.0-b43</version>
-        <relativePath />
+        <version>2.5.0-b63-SNAPSHOT</version>
     </parent>
     <artifactId>maven-plugins</artifactId>
     <version>2.5.0-b62-SNAPSHOT</version>
