Fixes for build erros
Errors were due to misnamed dependencies and a change in jsonp

Signed-off-by: Jonathan Coustick <jonathan.coustick@payara.fish>

--- a/hk2-utils/pom.xml
+++ b/hk2-utils/pom.xml
@@ -62,7 +62,7 @@
                  <configuration>
                     <instructions>
                         <Import-Package>
-                            javax.validation.*;resolution:=optional;version="${range;[==,${javax.validation.version.upperbound});${javax.validation.version}}
+                            javax.validation.*;resolution:=optional;version="${range;[==,${jakarta.validation.version.upperbound});${jakarta.validation.version}}
 ",
                             org.hibernate.validator.*;resolution:=optional;version="${range;[==,${hibernate-validator.version.upperbound});${hibernate-validator.version}}",
                             *
