--- a/class-model/pom.xml
+++ b/class-model/pom.xml
@@ -65,7 +65,7 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-           <groupId>jakarta.enterprise</groupId>
+           <groupId>javax.enterprise</groupId>
            <artifactId>cdi-api</artifactId>
            <scope>test</scope>
         </dependency>
