--- a/external/jsr330/pom.xml
+++ b/external/jsr330/pom.xml
@@ -25,7 +25,7 @@
         <version>2.5.0-b63-SNAPSHOT</version>
     </parent>
     <groupId>org.glassfish.hk2.external</groupId>
-    <artifactId>javax.inject</artifactId>
+    <artifactId>jakarta.inject</artifactId>
 
     <name>javax.inject:${javax-inject.version} as OSGi bundle</name>
     <description>Injection API (JSR 330) version ${javax.inject.version} repackaged as OSGi bundle</description>
