--- a/pom.xml
+++ b/pom.xml
@@ -136,9 +136,9 @@
         <jdk.version>1.6.0</jdk.version>
         <mvn.version>3.0.3</mvn.version>
 
-        <jakarta.annotation.version>1.3.3</jakarta.annotation.version>
+        <jakarta.annotation.version>1.3.4</jakarta.annotation.version>
         <jakarta.json.version>1.1.5</jakarta.json.version>
-        <glassfish.json.version>1.0.4</glassfish.json.version>
+        <glassfish.json.version>1.1.5</glassfish.json.version>
         <java.net.username>${user.name}</java.net.username>
         <hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
         <hibernate-validator.version.upperbound>7</hibernate-validator.version.upperbound>
@@ -587,7 +587,7 @@
                 <version>6.0.0</version>
             </dependency>
             <dependency>
-                <groupId>jakarta.enterprise</groupId>
+                <groupId>javax.enterprise</groupId>
                 <artifactId>cdi-api</artifactId>
                 <version>1.0</version>
             </dependency>
