--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,7 @@
         <jakarta.annotation.version>1.3.4</jakarta.annotation.version>
         <jakarta.json.version>1.1.5</jakarta.json.version>
         <glassfish.json.version>1.1.5</glassfish.json.version>
+        <javax.xml.bind.jaxb.version>2.1</javax.xml.bind.jaxb.version>
         <java.net.username>${user.name}</java.net.username>
         <hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
         <hibernate-validator.version.upperbound>7</hibernate-validator.version.upperbound>
@@ -489,6 +490,11 @@
                 <groupId>jakarta.json</groupId>
                 <artifactId>jakarta.json-api</artifactId>
                 <version>${jakarta.json.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${javax.xml.bind.jaxb.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish</groupId>
