--- a/examples/operations/pom.xml
+++ b/examples/operations/pom.xml
@@ -24,7 +24,6 @@
         <artifactId>examples</artifactId>
         <version>2.5.0-b63-SNAPSHOT</version>
     </parent>
-
     <artifactId>operations-example</artifactId>
     <name>Operations Example</name>
     <description>A demonstration of an HK2 Operation</description>
@@ -80,11 +79,11 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.glassfish.hk2.external</groupId>
-            <artifactId>javax.inject</artifactId>
+            <artifactId>jakarta.inject</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
