--- a/guice-bridge/pom.xml
+++ b/guice-bridge/pom.xml
@@ -26,10 +26,9 @@
     </parent>
     <groupId>org.glassfish.hk2</groupId>
     <artifactId>guice-bridge</artifactId>
-    
     <name>HK2 Guice Bridge</name>
     <description>${project.name}</description>
-    
+
     <build>
         <plugins>
             <plugin>
@@ -54,8 +53,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
+            <groupId>org.glassfish.hk2.external</groupId>
+            <artifactId>jakarta.inject</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.hk2</groupId>
