--- a/hk2-api/pom.xml
+++ b/hk2-api/pom.xml
@@ -27,8 +27,8 @@
     <groupId>org.glassfish.hk2</groupId>
     <artifactId>hk2-api</artifactId>
     <name>HK2 API module</name>
-
     <description>${project.name}</description>
+
     <build>
         <plugins>
             <plugin>
@@ -66,8 +66,9 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
+            <groupId>org.glassfish.hk2.external</groupId>
+            <artifactId>jakarta.inject</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.hk2</groupId>
