--- a/hk2-jmx/pom.xml
+++ b/hk2-jmx/pom.xml
@@ -57,8 +57,9 @@
             <artifactId>osgi-resource-locator</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
+            <groupId>org.glassfish.hk2.external</groupId>
+            <artifactId>jakarta.inject</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.hk2</groupId>
