--- a/hk2-locator/pom.xml
+++ b/hk2-locator/pom.xml
@@ -24,7 +24,6 @@
         <artifactId>hk2-parent</artifactId>
         <version>2.5.0-b63-SNAPSHOT</version>
     </parent>
-
     <artifactId>hk2-locator</artifactId>
     <name>ServiceLocator Default Implementation</name>
     <description>${project.name}</description>
@@ -63,9 +62,9 @@
         </plugins>
     </build>
     <dependencies>
-		 <dependency>
+        <dependency>
             <groupId>org.glassfish.hk2.external</groupId>
-            <artifactId>javax.inject</artifactId>
+            <artifactId>jakarta.inject</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
