--- a/hk2-testing/hk2-mockito/pom.xml
+++ b/hk2-testing/hk2-mockito/pom.xml
@@ -24,7 +24,6 @@
         <artifactId>hk2-testing</artifactId>
         <version>2.5.0-b63-SNAPSHOT</version>
     </parent>
-
     <artifactId>hk2-mockito</artifactId>
     <name>HK2 Mockito</name>
     <description>A utility for spying on HK2 services using Mockito</description>
@@ -70,7 +69,7 @@
         </dependency>
         <dependency>
             <groupId>org.glassfish.hk2.external</groupId>
-            <artifactId>javax.inject</artifactId>
+            <artifactId>jakarta.inject</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
