--- a/hk2-testing/hk2-runlevel-extras/pom.xml
+++ b/hk2-testing/hk2-runlevel-extras/pom.xml
@@ -25,7 +25,6 @@
         <version>2.5.0-b63-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-
     <artifactId>hk2-runlevel-extras</artifactId>
     <name>HK2 RunLevel unit tests</name>
     <description>Extra unit tests for the HK2 RunLevelService implementation</description>
@@ -64,7 +63,7 @@
         </dependency>
         <dependency>
             <groupId>org.glassfish.hk2.external</groupId>
-            <artifactId>javax.inject</artifactId>
+            <artifactId>jakarta.inject</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
