--- a/hk2-utils/pom.xml
+++ b/hk2-utils/pom.xml
@@ -27,8 +27,8 @@
     <groupId>org.glassfish.hk2</groupId>
     <artifactId>hk2-utils</artifactId>
     <name>HK2 Implementation Utilities</name>
-
     <description>${project.name}</description>
+
     <build>
         <plugins>
             <plugin>
@@ -71,7 +71,7 @@
                     <unpackBundle>true</unpackBundle>
                 </configuration>
             </plugin>
-	    </plugins>
+        </plugins>
     </build>
 
     <dependencies>
@@ -80,13 +80,14 @@
             <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
+            <groupId>org.glassfish.hk2.external</groupId>
+            <artifactId>jakarta.inject</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
-        	<groupId>javax.validation</groupId>
-        	<artifactId>validation-api</artifactId>
-        	<optional>true</optional>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
