--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -22,12 +22,12 @@
     <parent>
         <groupId>org.eclipse.ee4j</groupId>
         <artifactId>project</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.5</version>
         <relativePath />
     </parent>
     <groupId>org.glassfish.hk2</groupId>
     <artifactId>hk2-bom</artifactId>
-    <version>2.5.0-b63-SNAPSHOT</version>
+    <version>2.5.0-b64-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>HK2 Bom Pom</name>
@@ -162,7 +162,7 @@
             </dependency>
             <dependency>
                 <groupId>org.glassfish.hk2.external</groupId>
-                <artifactId>javax.inject</artifactId>
+                <artifactId>jakarta.inject</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
@@ -173,21 +173,6 @@
     </scm>
 
     <build>
-      <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-gpg-plugin</artifactId>
-            <executions>
-                <execution>
-                    <id>sign-artifacts</id>
-                    <phase>deploy</phase>
-                    <goals>
-                        <goal>sign</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-      </plugins>
         <pluginManagement>
             <plugins>
                 <plugin>
