--- a/hk2-locator/pom.xml
+++ b/hk2-locator/pom.xml
@@ -22,9 +22,8 @@
     <parent>
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>hk2-parent</artifactId>
-        <version>2.5.0-b63-SNAPSHOT</version>
+        <version>2.5.0-b64-SNAPSHOT</version>
     </parent>
-
     <artifactId>hk2-locator</artifactId>
     <name>ServiceLocator Default Implementation</name>
     <description>${project.name}</description>
@@ -63,9 +62,9 @@
         </plugins>
     </build>
     <dependencies>
-		 <dependency>
+        <dependency>
             <groupId>org.glassfish.hk2.external</groupId>
-            <artifactId>javax.inject</artifactId>
+            <artifactId>jakarta.inject</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -84,8 +83,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.javassist</groupId>
@@ -102,7 +101,7 @@
             </activation>
             <dependencies>
                 <dependency>
-                    <groupId>javax.xml.stream</groupId>
+                    <groupId>jakarta.xml.stream</groupId>
                     <artifactId>stax-api</artifactId>
                     <scope>provided</scope>
                 </dependency>
