--- a/hk2-testing/hk2-locator-no-proxies/pom.xml
+++ b/hk2-testing/hk2-locator-no-proxies/pom.xml
@@ -22,10 +22,9 @@
     <parent>
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>hk2-parent</artifactId>
-        <version>2.5.0-b63-SNAPSHOT</version>
+        <version>2.5.0-b64-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-
     <artifactId>hk2-locator-no-proxies</artifactId>
     <name>HK2 Locator No Proxy Unit tests</name>
     <description>Tests the basic HK2 locator with no proxiable scopes</description>
@@ -58,14 +57,14 @@
             <artifactId>hk2-locator</artifactId>
             <version>${project.version}</version>
             <exclusions>
-              <exclusion>
-                <groupId>org.javassist</groupId>
-                <artifactId>javassist</artifactId>
-              </exclusion>
-              <exclusion>
-                <groupId>org.glassfish.hk2.external</groupId>
-                <artifactId>aopalliance-repackaged</artifactId>
-              </exclusion>
+                <exclusion>
+                    <groupId>org.javassist</groupId>
+                    <artifactId>javassist</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.glassfish.hk2.external</groupId>
+                    <artifactId>aopalliance-repackaged</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -73,15 +72,15 @@
             <artifactId>hk2-api</artifactId>
             <version>${project.version}</version>
             <exclusions>
-              <exclusion>
-                <groupId>org.glassfish.hk2.external</groupId>
-                <artifactId>aopalliance-repackaged</artifactId>
-              </exclusion>
+                <exclusion>
+                    <groupId>org.glassfish.hk2.external</groupId>
+                    <artifactId>aopalliance-repackaged</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
             <groupId>org.glassfish.hk2.external</groupId>
-            <artifactId>javax.inject</artifactId>
+            <artifactId>jakarta.inject</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
