--- a/osgi/adapter-tests/no-hk2-bundle/pom.xml
+++ b/osgi/adapter-tests/no-hk2-bundle/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.glassfish.hk2</groupId>
         <artifactId>osgi-adapter-tests-parent</artifactId>
-        <version>2.5.0-b63-SNAPSHOT</version>
+        <version>2.5.0-b64-SNAPSHOT</version>
     </parent>
 
     <artifactId>no-hk2-bundle</artifactId>
@@ -55,7 +55,7 @@
     <dependencies>
         <dependency>
             <groupId>org.glassfish.hk2.external</groupId>
-            <artifactId>javax.inject</artifactId>
+            <artifactId>jakarta.inject</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
