PAYARA-3355 HK2 JDK-11 support
Signed-off-by: Gaurav Gupta <gaurav.gupta.jc@gmail.com>

--- a/hk2-configuration/persistence/hk2-xml/pom.xml
+++ b/hk2-configuration/persistence/hk2-xml/pom.xml
@@ -37,4 +37,11 @@
         <module>hk2-json</module>
         <module>hk2-pbuf</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+        </dependency>
+    </dependencies>
 </project>
