--- a/class-model/pom.xml
+++ b/class-model/pom.xml
@@ -38,8 +38,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
