--- a/pom.xml
+++ b/pom.xml
@@ -306,7 +306,9 @@
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>3.0.1</version>
                     <configuration>
-                        <additionalparam>${javadoc.options}</additionalparam>
+                        <additionalOptions>
+                            <additionalOption>${javadoc.options}</additionalOption>
+                        </additionalOptions>
                     </configuration>
                 </plugin>
                 <plugin>
