Update maven-jar-plugin to 3.1.1
Also made all required changes to the poms so that it builds with new options

Signed-off-by: Jonathan Coustick <jonathan.coustick@payara.fish>

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -29,6 +29,10 @@
     <packaging>pom</packaging>
     <name>Examples of various use cases</name>
     
+    <properties>        
+        <manifest.location></manifest.location> <!-- to make nullifiy the property -->
+    </properties>
+    
     <modules>
         <module>custom-resolver</module>
         <module>security-lockdown</module>
@@ -37,4 +41,5 @@
         <module>configuration</module>
         <module>operations</module>
     </modules>
+    
 </project>
