--- a/hk2-utils/pom.xml
+++ b/hk2-utils/pom.xml
@@ -38,8 +38,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
+                <configuration>     
                     <archive>
+                        <manifestFile>target/classes/META-INF/MANIFEST.MF</manifestFile>
                         <manifestEntries>
                             <service>foo</service>
                         </manifestEntries>
