--- a/osgi/adapter-tests/osgi-adapter-test/pom.xml
+++ b/osgi/adapter-tests/osgi-adapter-test/pom.xml
@@ -26,6 +26,10 @@
     <groupId>org.glassfish.hk2</groupId>
     <artifactId>osgi-adapter-test</artifactId>
     <name>HK2 OSGi Adapter Test</name>
+    
+    <properties>        
+        <manifest.location></manifest.location>
+    </properties>
 
     <build>
         <plugins>
