--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,8 @@
         <findbugs.threshold>High</findbugs.threshold>
         <surefireArgLineExtra />
         <release.arguments />
+        
+        <manifest.location>target/classes/META-INF/MANIFEST.MF</manifest.location>
     </properties>
 
     <modules>
@@ -274,7 +276,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <useDefaultManifestFile>true</useDefaultManifestFile>
+                    <archive>
+                        <manifestFile>${manifest.location}</manifestFile>
+                    </archive>
                 </configuration>
             </plugin>
             <plugin>
@@ -377,7 +381,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>2.4</version>
+                    <version>3.1.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.felix</groupId>
