--- a/hk2/pom.xml
+++ b/hk2/pom.xml
@@ -66,7 +66,7 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
-                        <Bundle-SymbolicName>org.glassfish.hk2.hk2</Bundle-SymbolicName>
+                        <Bundle-SymbolicName>hk2.hk2</Bundle-SymbolicName>
                     </instructions>
                 </configuration>
                 <executions>
