--- a/pom.xml
+++ b/pom.xml
@@ -160,7 +160,7 @@
         <testng.version>7.1.0</testng.version>
         <assertj.version>3.15.0</assertj.version>
         <pax-exam-version>4.13.1</pax-exam-version>
-        <javax-inject.version>1</javax-inject.version>
+        <javax-inject.version>1.0</javax-inject.version>
         <slf4j.version>1.7.30</slf4j.version>
         <org.jboss.logging.version>3.4.1.Final</org.jboss.logging.version>
         <jersey.version>2.30.1</jersey.version>
@@ -586,8 +586,8 @@
                 <version>2.33</version>
             </dependency>
             <dependency>
-                <groupId>javax.inject</groupId>
-                <artifactId>javax.inject</artifactId>
+                <groupId>jakarta.inject</groupId>
+                <artifactId>jakarta.inject-api</artifactId>
                 <version>${javax-inject.version}</version>
             </dependency>
             <dependency>
