Use RC3 of jakarata.inject; replaces copy in external
Signed-off-by: Jonathan Coustick <jonathan.coustick@payara.fish>

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -181,9 +181,9 @@
                 <version>${asm.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.glassfish.hk2.external</groupId>
-                <artifactId>jakarta.inject</artifactId>
-                <version>${project.version}</version>
+                <groupId>jakarta.inject</groupId>
+                <artifactId>jakarta.inject-api</artifactId>
+                <version>${jakarta-inject.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
