--- a/pom.xml
+++ b/pom.xml
@@ -160,7 +160,7 @@
         <testng.version>7.1.0</testng.version>
         <assertj.version>3.15.0</assertj.version>
         <pax-exam-version>4.13.1</pax-exam-version>
-        <jakarta-inject.version>2.0.0.RC1</jakarta-inject.version>
+        <jakarta-inject.version>2.0.0-RC3</jakarta-inject.version>
         <slf4j.version>1.7.30</slf4j.version>
         <org.jboss.logging.version>3.4.1.Final</org.jboss.logging.version>
         <jersey.version>2.30.1</jersey.version>
