Upgrade grizzly and jersey; reenable jersey tests
Fixes #506

Signed-off-by: Jonathan Coustick <jonathan.coustick@payara.fish>

--- a/hk2-testing/jersey/jersey-guice/pom.xml
+++ b/hk2-testing/jersey/jersey-guice/pom.xml
@@ -32,7 +32,6 @@
     <name>HK2 Jersey Guice Tests</name> 
 
     <modules>
-        <!-- To be ininstated once Jersey is updated-->
-        <!-- <module>form-param</module> -->
+        <module>form-param</module>
     </modules>
 </project>
