--- a/pom.xml
+++ b/pom.xml
@@ -161,8 +161,8 @@
         <jakarta-inject.version>2.0.0-RC3</jakarta-inject.version>
         <slf4j.version>1.7.30</slf4j.version>
         <org.jboss.logging.version>3.4.1.Final</org.jboss.logging.version>
-        <jersey.version>3.0.0-M1</jersey.version>
-        <grizzly.version>2.4.4</grizzly.version>
+        <jersey.version>3.0.0-M6</jersey.version>
+        <grizzly.version>3.0.0-M1</grizzly.version>
         <hamcrest.version>1.3</hamcrest.version>
         <jakarta.servlet.version>5.0.0-M1</jakarta.servlet.version>
         <jakarta.ws.rs.version>3.0.0-M1</jakarta.ws.rs.version>
