--- a/hk2-configuration/persistence/hk2-xml/schema/pom.xml
+++ b/hk2-configuration/persistence/hk2-xml/schema/pom.xml
@@ -82,7 +82,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <!-- Turns on debug logging -->
-                    <argLine>-Dorg.jvnet.hk2.logger.debugToStdout=false -Dorg.jvnet.hk2.properties.xmlservice.jaxb.getsandsets=false ${surefireArgLineExtra}</argLine>
+                    <argLine>-Dorg.jvnet.hk2.logger.debugToStdout=false -Dorg.jvnet.hk2.properties.xmlservice.jaxb.getsandsets=false @{surefireArgLineExtra}</argLine>
                 </configuration>
             </plugin>
         </plugins>
