--- a/hk2-configuration/persistence/hk2-xml/test1/pom.xml
+++ b/hk2-configuration/persistence/hk2-xml/test1/pom.xml
@@ -92,7 +92,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <!-- Turns on debug logging -->
-                    <argLine>-Dorg.jvnet.hk2.logger.debugToStdout=true -Dorg.jvnet.hk2.properties.xmlservice.jaxb.getsandsets=false -Dorg.jvnet.hk2.properties.xmlservice.jaxb.generationtime=true ${surefireArgLineExtra}</argLine>
+                    <argLine>-Dorg.jvnet.hk2.logger.debugToStdout=true -Dorg.jvnet.hk2.properties.xmlservice.jaxb.getsandsets=false -Dorg.jvnet.hk2.properties.xmlservice.jaxb.generationtime=true @{surefireArgLineExtra}</argLine>
                 </configuration>
             </plugin>
         </plugins>
