--- a/hk2-runlevel/pom.xml
+++ b/hk2-runlevel/pom.xml
@@ -65,7 +65,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <!-- Turns on debug logging -->
-                    <argLine>-Dorg.jvnet.hk2.logger.debugToStdout=false -Dorg.jvnet.hk2.properties.debug.runlevel.context=false ${surefireArgLineExtra}</argLine>
+                    <argLine>-Dorg.jvnet.hk2.logger.debugToStdout=false -Dorg.jvnet.hk2.properties.debug.runlevel.context=false @{surefireArgLineExtra}</argLine>
                 </configuration>
             </plugin>
             <plugin>
